--- a/styles/style.css
+++ b/styles/style.css
@@ -119,8 +119,8 @@ footer {
 
 #puzzle {
     position: relative;
-    width: 1982px;
-    height: 1187px;
+    width: 1189.2px;
+    height: 712.2px;
     /* width: 1000px;
     height: 599px; */
     background-size: cover;
@@ -132,8 +132,10 @@ footer {
     z-index: 50;
     max-width: 100%;
     max-height: 100%;
-    border: 1px solid black;
-
+    /* border: 1px solid black; */
+    
+    /* width: 60% */
+    
 }
 
 .baby {
@@ -142,5 +144,11 @@ footer {
 }
 
 .clicky-image {
-    /* opacity: 0; */
+    /* opacity: .2; */
+    width: 60%;
+    /* display: none; */
+}
+
+.drop-shadow {
+    filter: drop-shadow(5px 5px 5px hsl(180, 50%, 50%));
 }
