make puzzle render dynamic and target most recent and target most recent score

--- a/styles/style.css
+++ b/styles/style.css
@@ -153,3 +153,7 @@ footer {
     filter: drop-shadow(5px 5px 5px hsl(180, 50%, 50%));
     opacity: 1;
 }
+
+.last-score{
+    font-weight: bold;
+}
