--- a/styles/style.css
+++ b/styles/style.css
@@ -31,9 +31,10 @@ main {
     background-image: url('../assets/book.png');
     background-repeat: no-repeat;
     background-position: center;
+    background-size: 1650px 1250px;
+
     position: relative;
-    border: 15px blue solid;
-    height: 100vh;
+    height: 90vh;
 }
 
 #puzzle-container {
@@ -42,7 +43,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 6rem 0rem 0rem 1.5rem;
+    margin: -8rem 0rem 0rem 1.3rem;
 }
 
 section {
@@ -50,7 +51,6 @@ section {
     /* width: 1000px; */
     /* max-width: 80%; */
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-top: var(--gutter);
@@ -66,7 +66,7 @@ header {
     justify-content: space-between;
     background-color: rgb(164,14,0);
     height: var(--header-height);
-    box-shadow: var(--shadow);
+    box-shadow: rgb(54, 14, 0);
 }
 
 .header-container {
@@ -137,26 +137,10 @@ h2 {
 header img {
     height: var(--header-height);
 }
-
-p {
-    margin: var(--gutter);
-}
-  
-footer {
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    height: var(--footer-height);
-    display: flex;
-    justify-content: flex-end;
-    background-color: var(--color3);
-    box-shadow: var(--shadow);
-}
   
 .disabled {
     pointer-events: none;
 }
-
 
 #puzzle {
     position: relative;
@@ -167,39 +151,65 @@ footer {
     background-size: cover;
 }
 
+#timer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    width: 1189.2px;
+    margin: 0;
+    padding: 0;
+    font-size: larger;
+}
+
+#time {
+    text-align: center;
+}
+
+.score-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#score {
+    text-align: center;
+}
+
+#item-list {
+    margin:0;
+    padding: 0;
+    font-size: large;
+    width: 1189.2px;
+}
+
 .clicky {
     position: absolute;
-
     z-index: 50;
     max-width: 100%;
     max-height: 100%;
-    /* border: 1px solid black; */
-    
-    /* width: 60% */
-    
 }
 
 .baby {
     cursor: pointer;
-
-
 }
 
 .clicky-image {
     opacity: 0;
     width: 60%;
-    /* display: none; */
 }
 
 .drop-shadow {
     filter: drop-shadow(5px 5px 5px hsl(180, 50%, 50%));
-
     opacity: 1;
-
 }
 
 .last-score {
     font-weight: bold;
+}
+
+.end-game-button {
+    font-size: xx-large;
 }
 
 
