--- a/styles/style.css
+++ b/styles/style.css
@@ -164,6 +164,7 @@ header img {
     font-family: 'Gentium Book Basic', serif;
     font-size: larger;
     font-weight: bolder;
+}
 
 #time {
     text-align: center;
