--- a/styles/signup.css
+++ b/styles/signup.css
@@ -1,42 +1,50 @@
 .sign-up {
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
+    top: 10%;
+    left:  11%;
+  
     position: absolute;
-    margin-top: 314px;
-    margin-left: 180px;;
-    background-color: white;
+    /* margin-top: 314px;
+    margin-left: 180px;; */
+    /* background-color: rgb(159, 40, 22); */
     width: 250px;
     height: 250px;
-    
     border: solid 2px black
 }
 
+
     
-}
+
 .login {
-    display: flex;
+    top: 35%;
+    left: 61%;
+    
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     position: absolute;
-    margin-top: 314px;
-    margin-left: 180px;;
-    background-color: white;
+    /* margin-top: 314px;
+    margin-left: 180px;; */
+    /* background-color: rgb(159, 40, 22); */
     width: 250px;
     height: 250px;
-    border: solid 2px black
+    border: solid 2px black;
+    
 
 }
 
  main {
-     display: flex;
-     flex-direction: row;
+     /* display: flex;
+     flex-direction: row; */
+     position: relative;
      
  }
 
- .left {
+ /* .left {
      position: relative;
-     background-color: rgb(159, 40, 22);
+     background-color: white;
      width: 594.6px;
      height: 865px;
      
@@ -50,17 +58,23 @@
 
  .right {
     position: relative;
-     background-color: rgb(159, 40, 22);
+     background-color: white;
      width: 594.6px;
      height: 865px;
      margin-right: 15px;
      margin: 10px;
      margin-bottom: 47px;
      
- }
+    } */
  /* .main {
      display: grid;
 
      height: 100%;
      grid-template-columns: 1fr, 1fr;
  } */
+
+ input {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #000000;
+}
