--- a/styles/splash.css
+++ b/styles/splash.css
@@ -30,12 +30,17 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: url('../assets/beads/bead-explosion.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 #logo {
     justify-content: center;
     width: 600px;
     height: 600px;
+    border-radius: 50px;
+    position: relative;
 }
 
 .home-page {
@@ -47,25 +52,46 @@ section {
     flex-direction: column;
     align-items: center;
     background-color: white;
-    width: 200px;
+    width: 220px;
     height: 200px;
     border-radius: 35px;
-    border: solid 2px rgb(243,182,0);
+    border: 2px solid rgb(159, 40, 22);
+    position: absolute;
+    margin-bottom: 100px;
 }
 
 
-#login {
+/* #login {
     margin: 40px;
-}
+} */
 
 #new-user {
-    margin: 40px;
+    margin: auto;
 }
 
-.hr {
+/* .hr {
     width: 150px;
+} */
+
+/* h4 {
+    margin: 20px;
+} */
+
+button {
+    
+    background-color: white;
+    border-radius: 15px;
+    padding: 15px;
+    border: 2px solid rgb(243,182,0);
+    cursor: pointer;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    font-size: 1.25rem;
+    color:rgb(159, 40, 22)
 }
 
-h4 {
-    margin: 20px;
+button:hover {
+    background: rgb(243,182,0);
+    color: white;
+    
 }
+
