--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,8 @@ body {
     --footer-height: 25px;
     
     font-family: 'Titillium Web', sans-serif;
-    background-color: var(--color2);
+    background: rgb(57,7,2);
+    background: linear-gradient(0deg, rgba(57,7,2,1) 0%, rgba(164,15,0,1) 100%);
 }
 
 main {
