--- a/styles/credits.css
+++ b/styles/credits.css
@@ -196,6 +196,10 @@ footer {
     width: 60%;
 }
 
+.ispy-rhymes span {
+    color: white;
+}
+
 main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
