--- a/styles/splash.css
+++ b/styles/splash.css
@@ -30,7 +30,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url('../assets/beads/bead-explosion.jpeg');
+    background-image: url('../assets/bead-explosion.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
 }
