--- a/styles/splash.css
+++ b/styles/splash.css
@@ -10,8 +10,6 @@ main {
 
 section {
     background-color: var(--color5);
-    /* width: 1000px; */
-    /* max-width: 80%; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,7 +28,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url('../assets/beads/bead-explosion.jpeg');
+    background-image: url('../assets/bead-explosion.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -60,22 +58,9 @@ section {
     margin-bottom: 100px;
 }
 
-
-/* #login {
-    margin: 40px;
-} */
-
 #new-user {
     margin: auto;
 }
-
-/* .hr {
-    width: 150px;
-} */
-
-/* h4 {
-    margin: 20px;
-} */
 
 button {
     
