--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,6 @@
 
 body {
-    /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
-    /* --color1: hsla(349, 69%, 76%, 1);
-    --color2: hsla(207, 67%, 44%, 1);
-    --color3: hsla(200, 61%, 56%, 1);
-    --color4: hsla(187, 41%, 94%, 1);
-    --color5: hsla(170, 28%, 95%, 1); */
-
-    /* --color1: hsla(45, 86%, 83%, 1);
-    --color2: hsla(135, 65%, 98%, 1);
-    --color3: hsla(315, 37%, 86%, 1);
-    --color4: hsla(45, 73%, 98%, 1);
-    --color5: hsla(224, 40%, 79%, 1); */
-    
+ 
     --header-height: 100px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
     --gutter: 30px;
@@ -48,8 +36,6 @@ main {
 
 section {
     background-color: var(--color5);
-    /* width: 1000px; */
-    /* max-width: 80%; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,7 +50,6 @@ section {
 header {
     display: flex;
     justify-content: space-between;
-    background-color: rgb(164,14,0);
     height: var(--header-height);
     box-shadow: rgb(54, 14, 0);
 }
@@ -218,7 +203,7 @@ header img {
 
 .end-game-button {
     font-size: xx-large;
-    margin-top: 950px;
+    position: absolute;
 }
 
 .main-instructions {
