--- a/music/music.css
+++ b/music/music.css
@@ -1,3 +1,4 @@
+/* Sourced from https://github.com/bradtraversy/vanillawebprojects/tree/master/music-player */
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
 * {
