--- a/styles/signup.css
+++ b/styles/signup.css
@@ -42,6 +42,7 @@
 /* } */ 
 
 .container {
+    justify-content: space-around;
     position: absolute;
     display: flex;
     flex-direction: row;
@@ -56,21 +57,65 @@
  }
 
  .left {
-    width: 50%;
+    width: 35%;
      position: relative;
-     margin: 10px;
+    
      display: flex;
      flex-direction: column;
-     border: blue 2px solid;
+    
+     
  }
  .right {
-    margin: 10px;
-    width: 50%;
+    
+    width: 35%;
      position: relative;
      display: flex;
      flex-direction: column;
-     border: blue 2px solid;
+    
  }
+
+ form {
+     padding: 50px;
+     text-align: center;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+ }
+::placeholder {
+    text-align: center;
+}
+
+ button {
+     margin: 10px;
+    width: 40%;
+    text-align: center;
+    background-color: white;
+    border-radius: 15px;
+    padding: 15px;
+    border: 2px solid rgb(243,182,0);
+    cursor: pointer;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+    font-size: 1.25rem;
+    color:rgb(159, 40, 22)
+}
+
+button:hover {
+    background: rgb(243,182,0);
+    color: white;
+    
+}
+
+.user-message {
+    border: solid red 1px;
+    text-align: center;
+    margin: 8px;
+    margin-bottom: 15px;
+    padding: 3px;
+}
+
+
+
  /* .left {
      position: relative;
      background-color: white;
