--- a/styles/signup.css
+++ b/styles/signup.css
@@ -1,45 +1,7 @@
-
 * {
-    border: 1px black solid;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    ;
 }
-
-/* .sign-up {
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    /* top: 38%;
-    left: 31%; */
-  
-    /* position: absolute; */
-    /* margin-top: 314px;
-    margin-left: 180px;; */
-    /* background-color: rgb(159, 40, 22); */
-    /* width: 350px;
-    height: 300px;
-    
-    border: solid 2px black
-} */
-
-
-    
-
-/* .login { */
-    /* top: 38%;
-    left: 56%;
-     */
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    /* position: absolute; */
-    /* margin-top: 314px;
-    margin-left: 180px;; */
-    /* background-color: rgb(159, 40, 22); */
-    /* width: 350px;
-    height: 300px;
-    border: dotted rgb(159, 40, 22) 1px;
-     */
-
-/* } */ 
 
 .container {
     justify-content: space-around;
