--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ body {
     --gutter: 30px;
     --footer-height: 25px;
     
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background: rgb(57,7,2);
     background: linear-gradient(0deg, rgba(57,7,2,1) 0%, rgba(164,15,0,1) 100%);
 }
@@ -50,8 +50,9 @@ section {
 header {
     display: flex;
     justify-content: space-between;
+    background-color: rgb(164,14,0);
     height: var(--header-height);
-    box-shadow: rgb(54, 14, 0);
+    box-shadow: var(--shadow);
 }
 
 .header-container {
@@ -73,7 +74,7 @@ header {
 .nav-links {
     margin: 20px;
     color: rgb(243,182,0);
-    font-family: 'Gentium Book Basic', serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 700;
     font-size: 40px;
 }
@@ -83,7 +84,7 @@ header {
     justify-content: flex-end;
     margin: auto;
     width: auto;
-    font-family: 'Gentium Book Basic', serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .username {
@@ -146,7 +147,7 @@ header img {
     width: 1189.2px;
     margin: -20px ;
     padding: 0;
-    font-family: 'Gentium Book Basic', serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: larger;
     font-weight: bolder;
 }
@@ -172,7 +173,7 @@ header img {
     padding: 0;
     font-size: 20px;;
     width: 1189.2px;
-    font-family: 'Gentium Book Basic', serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .clicky {
@@ -218,7 +219,7 @@ header img {
 .main-instructions {
     display: flex;
     flex-direction: row;
-    font-family: 'Gentium Book Basic', serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .left-instructions {
@@ -246,7 +247,7 @@ header img {
 .main-results {
     display: flex;
     flex-direction: row;
-    font-family: 'Gentium Book Basic', serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .left-results { 
