--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,7 @@ header img {
     font-size: 20px;;
     width: 1189.2px;
     font-family: 'Gentium Book Basic', serif;
+    display: inline;
 }
 
 .clicky {
@@ -246,11 +247,13 @@ header img {
     width: 594.6px;
     margin: 30px;
     text-align: center;
+    height: 712.2px;
     display: flex;
     flex-direction: column;
     border: 1px solid black;
+    overflow: auto;
+    
 }
-
 
 .table-title {
     font-weight: bold;
@@ -259,7 +262,7 @@ header img {
 
 th {
     font-weight: bold;
-    border-bottom: 1px black solid;
+    border-bottom: 1px black solid;    
 }
 
 td {
@@ -270,9 +273,10 @@ td {
     width: 594.6px;
     margin: 10px;
     text-align: center;
-
+    height: 712.2px;
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
 
 .play-again-button {
