--- a/styles/signup.css
+++ b/styles/signup.css
@@ -19,7 +19,7 @@
  }
 
  .left {
-    width: 35%;
+    width: 40%;
      position: relative;
     
      display: flex;
@@ -29,7 +29,7 @@
  }
  .right {
     
-    width: 35%;
+    width: 40%;
      position: relative;
      display: flex;
      flex-direction: column;
@@ -37,6 +37,7 @@
  }
 
  form {
+     border: double 15px rgb(159, 40, 22);
      padding: 50px;
      text-align: center;
      display: flex;
@@ -78,38 +79,13 @@ button:hover {
 
 
 
- /* .left {
-     position: relative;
-     background-color: white;
-     width: 594.6px;
-     height: 865px;
-     
-     margin: 30px;
-     margin-bottom: 68px;
-     
-    
-     
-     
- }
-
- .right {
-    position: relative;
-     background-color: white;
-     width: 594.6px;
-     height: 865px;
-     margin-right: 15px;
-     margin: 10px;
-     margin-bottom: 47px;
-     
-    } */
- /* .main {
-     display: grid;
-
-     height: 100%;
-     grid-template-columns: 1fr, 1fr;
- } */
+h1 {
+    font-size: xx-large;
+    margin: 10px;
+}
 
  input {
+    font-size: x-large;
     background: transparent;
     border: none;
     border-bottom: 1px solid #000000;
